--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -936,12 +936,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   pre       rec       spe        f1       geo       iba       sup\n",
+      "\n",
+      "  high_risk       0.01      0.67      0.66      0.02      0.66      0.44        87\n",
+      "   low_risk       1.00      0.66      0.67      0.80      0.66      0.44     17118\n",
+      "\n",
+      "avg / total       0.99      0.66      0.67      0.79      0.66      0.44     17205\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(classification_report_imbalanced(y_test, smote_y_pred))\n"
    ]
   },
   {
@@ -963,53 +977,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Resample the data using the ClusterCentroids resampler\n",
     "# Warning: This is a large dataset, and this step may take some time to complete\n",
-    "# YOUR CODE HERE"
+    "from imblearn.under_sampling import ClusterCentroids\n",
+    "\n",
+    "cc = ClusterCentroids(random_state = 1)\n",
+    "X_cc, y_cc = cc.fit_resample(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(random_state=1)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "cc_model = LogisticRegression(solver = 'lbfgs', random_state = 1)\n",
+    "cc_model.fit(X_cc, y_cc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5103893461611291"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "cc_y_pred = cc_model.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, cc_y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  51,   36],\n",
+       "       [9679, 7439]])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "confusion_matrix(y_test, cc_y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   pre       rec       spe        f1       geo       iba       sup\n",
+      "\n",
+      "  high_risk       0.01      0.59      0.43      0.01      0.50      0.26        87\n",
+      "   low_risk       1.00      0.43      0.59      0.60      0.50      0.25     17118\n",
+      "\n",
+      "avg / total       0.99      0.44      0.59      0.60      0.50      0.25     17205\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(classification_report_imbalanced(y_test, cc_y_pred))"
    ]
   },
   {
